# boarhiro

./: .gitignore  README.md  boarhiro_brain.pt  clean_data.py  link.txt  publish.ps1  pyproject.toml  rebuild_boarhiro.py  release_model.ps1  requirements.txt  setup.py  start_train.ps1  train.py
boarhiro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: input.txt
docs/: API.md  ARCHITECTURE.md  index.html
src/: auto_generator.py  bridge.py  interface.py  local_watcher.py
src/boarhiro/: __init__.py  downloader.py  interface.py  server.py  stopper.py  trainer.py  updater.py
src/boarhiro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/boarhiro/agent/: __init__.py  config.py  lifecycle.py  worker.py
src/boarhiro/api/: __init__.py  client.py
src/boarhiro/config/: __init__.py  agent_config.py
src/boarhiro/interface/: __init__.py  commands.py  main.py  status.py  ui.py
src/boarhiro/job/: __init__.py
src/boarhiro/logger/: __init__.py  structured.py
src/boarhiro/utils/: __init__.py  errors.py
