[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boarhiro"
version = "0.1.0"
authors = [{ name="furrycoder67" }]
description = "Transformer-based neural AI that trains itself and gets smarter the longer it runs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "neural network", "transformer", "chatbot", "machine learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "requests",
    "rich",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/FurryCoder67/boarhiro"
Repository = "https://github.com/FurryCoder67/boarhiro"

[project.scripts]
boarhiro      = "boarhiro.interface:run_cli"
trainboarhiro = "boarhiro.trainer:main"
stopboarhiro  = "boarhiro.stopper:main"

[tool.setuptools.packages.find]
where = ["src"]
