[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boarhiro"
version = "0.2.0"
authors = [{name="furrycoder67" }]
description = "Self-training transformer-based AI with modular agent architecture. Trains continuously and improves locally."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "neural network", "transformer", "chatbot", "machine learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "requests",
    "rich",
    "packaging",
    "prompt-toolkit",
]

[project.urls]
Homepage = "https://github.com/FurryCoder67/boarhiro"
Repository = "https://github.com/FurryCoder67/boarhiro"

[project.scripts]
boarhiro      = "boarhiro.interface:run_cli"
trainboarhiro = "boarhiro.trainer:main"
stopboarhiro  = "boarhiro.stopper:main"

[tool.setuptools.packages.find]
where = ["src"]
